--- a/app/views/contractorpos/show.html.erb
+++ b/app/views/contractorpos/show.html.erb
@@ -27,3 +27,29 @@
 
 <%= link_to 'Edit', edit_contractorpo_path(@contractorpo) %> |
 <%= link_to 'Back', contractorpos_path %>
+
+<h3>Invoices</h3>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Invoice To</th>
+      <th scope="col">Number</th>
+      <th scope="col">Percentage</th>
+      <th scope="col">Amount</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @contractorpo.contractorinvoices.each do |contractorinvoice| %>
+      <tr>
+        <td scope="row"><%= contractorinvoice.id %></td>
+        <td><%= contractorinvoice.invoice_to %></td>
+        <td><%= link_to contractorinvoice.number, contractorinvoice_path(contractorinvoice) %></td>
+        <td><%= contractorinvoice.stage.percentage %></td>
+        <td><%= (contractorinvoice.contractorpo.amount * (contractorinvoice.stage.percentage/100)).round(2) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
