--- a/app/views/contractorquotes/show.html.erb
+++ b/app/views/contractorquotes/show.html.erb
@@ -32,3 +32,29 @@
 
 <%= link_to 'Edit', edit_contractorquote_path(@contractorquote) %> |
 <%= link_to 'Back', :back %>
+
+<h3>Invoices</h3>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Number</th>
+      <th scope="col">Invoice To</th>
+      <!-- <th scope="col">Percentage</th>
+      <th scope="col">Amount</th> -->
+      <!-- <th colspan="3"></th> -->
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @contractorquote.contractorinvoices.each do |contractorinvoice| %>
+      <tr>
+        <td scope="row"><%= contractorinvoice.id %></td>
+        <td><%= link_to contractorinvoice.number, contractorinvoice_path(contractorinvoice) %></td>
+        <td><%= contractorinvoice.invoice_to %></td>
+        <!-- <td><%#= contractorinvoice.stage.percentage %></td> -->
+        <!-- <td><%#= (contractorinvoice.contractorpo.amount * (contractorinvoice.stage.percentage/100)).round(2) %></td> -->
+      </tr>
+    <% end %>
+  </tbody>
+</table>
