--- a/app/views/paymentvouchers/index.html.erb
+++ b/app/views/paymentvouchers/index.html.erb
@@ -7,8 +7,8 @@
     <tr>
       <th scope="col">#</th>
       <th scope="col">Number</th>
-      <th scope="col">Site</th>
       <th scope="col">Contractorinvoice</th>
+      <th scope="col">Contractor</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,8 +18,8 @@
       <tr>
         <td scope="row"><%= paymentvoucher.id %></td>
         <td><%= paymentvoucher.number %></td>
-        <td><%= link_to paymentvoucher.site.name, site_path(paymentvoucher.site) %></td>
         <td><%= link_to paymentvoucher.contractorinvoice.number, contractor_path(paymentvoucher.contractorinvoice) %></td>
+        <td><%= link_to paymentvoucher.contractorinvoice.contractor.name, contractor_path(paymentvoucher.contractorinvoice) %></td>
         <td><%= link_to 'Show', paymentvoucher %></td>
         <td><%= link_to 'Edit', edit_paymentvoucher_path(paymentvoucher) %></td>
         <td><%= link_to 'Delete', paymentvoucher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
