--- a/app/views/paymentvouchers/index.html.erb
+++ b/app/views/paymentvouchers/index.html.erb
@@ -18,8 +18,8 @@
       <tr>
         <td scope="row"><%= paymentvoucher.id %></td>
         <td><%= paymentvoucher.number %></td>
-        <td><%= link_to paymentvoucher.contractorinvoice.number, contractor_path(paymentvoucher.contractorinvoice) %></td>
-        <td><%= link_to paymentvoucher.contractorinvoice.contractor.name, contractor_path(paymentvoucher.contractorinvoice) %></td>
+        <td><%#= link_to paymentvoucher.contractorinvoice.number, contractor_path(paymentvoucher.contractorinvoice) %></td>
+        <td><%#= link_to paymentvoucher.contractorinvoice.contractor.name, contractor_path(paymentvoucher.contractorinvoice) %></td>
         <td><%= link_to 'Show', paymentvoucher %></td>
         <td><%= link_to 'Edit', edit_paymentvoucher_path(paymentvoucher) %></td>
         <td><%= link_to 'Delete', paymentvoucher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
