--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -8,11 +8,8 @@
       <th scope="col">#</th>
       <th scope="col">Number</th>
       <th scope="col">Date</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Status</th>
-      <th scope="col">Scope</th>
+      <!-- <th scope="col">Status</th> -->
       <th scope="col">Customerpo</th>
-      <th scope="col">Site</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,11 +20,8 @@
         <td><%= invoice.id %></td>
         <td><%= invoice.number %></td>
         <td><%= invoice.date.strftime("%d %b, %Y") %></td>
-        <td><%= invoice.amount %></td>
-        <td><%= invoice.status.state %></td>
-        <td><%= invoice.scope.scope_type %></td>
+        <!-- <td><%#= invoice.status.state %></td> -->
         <td><%= invoice.customerpo.number %></td>
-        <td><%= invoice.site.name %></td>
         <td><%= link_to 'Show', invoice %></td>
         <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
         <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
