--- a/app/views/stages/_form.html.erb
+++ b/app/views/stages/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :milestone_id %>
-    <%= form.collection_select :milestone_id, Milestone.all, id:, :phase %>
+    <%#= form.label :milestone_id %>
+    <%##= form.collection_select :milestone_id, Milestone.all, id:, :phase %>
   </div>
   
   <div class="field">
